--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,28 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+        crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+        crossorigin="anonymous"></script>
     <title>Survey</title>
 </head>
+
 <body>
     <form>
+        <h1>Survey</h1>
+        <hr>
         <h3>About You</h3>
         <div class="form-group">
-          <label for="name">Name (Required)</label>
-          <input type="text" class="form-control" id="userName" aria-describedby="nameHelp" placeholder="Enter your name">
+            <label for="name">Name (Required)</label>
+            <input type="text" class="form-control" id="userName" aria-describedby="nameHelp" placeholder="Enter your name">
         </div>
         <div class="form-group">
-          <label for="photo">Link to Photo Image (Required)</label>
-          <input type="text" class="form-control" id="userPhoto" placeholder="Paste a link to your photo">
+            <label for="photo">Link to Photo Image (Required)</label>
+            <input type="text" class="form-control" id="userPhoto" placeholder="Paste a link to your photo">
         </div>
+    </form>
+    <div>
+        <hr>
+        <h3>Question 1</h3>
+        <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+        <select id=q1>
+            <option value="1">1 (Strongly Disaree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">2</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+
+        <h3>Question 2</h3>
+        <p>Generally speaking, you rely more on your experience than your imagaination.</p>
+        <select id=q2>
+            <option value="1">1 (Strongly Disaree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">2</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+
+        <h3>Question 3</h3>
+        <p>You find it easy to stay relaxed and focused even when there is some pressure.</p>
+        <select id=q3>
+            <option value="1">1 (Strongly Disaree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">2</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+
+        <h3>Question 4</h3>
+        <p>You rarely do something just out of sheer curiosity.</p>
+        <select id=q4>
+            <option value="1">1 (Strongly Disaree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">2</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+
+        <h3>Question 5</h3>
+        <p>People can rarely upset you.</p>
+        <select id=q5>
+            <option value="1">1 (Strongly Disaree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">2</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+
+        <h3>Question 6</h3>
+        <p>It is ofent difficult for you to relate to other people's feelings.</p>
+        <select id=q6>
+            <option value="1">1 (Strongly Disaree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">2</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+
+        <h3>Question 7</h3>
+        <p>In a discussion, truth should be more important than people's sensitivities.</p>
+        <select id=q7>
+            <option value="1">1 (Strongly Disaree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">2</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+
+        <h3>Question 8</h3>
+        <p>You rarely get carried away by fantasies and ideas.</p>
+        <select id=q8>
+            <option value="1">1 (Strongly Disaree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">2</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+
+        <h3>Question 9</h3>
+        <p>You think that everyone's views should be respected regardless of whether they are supported by facts or not.</p>
+        <select id=q9>
+            <option value="1">1 (Strongly Disaree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">2</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+
+        <h3>Question 10</h3>
+        <p>You feel more energetic after spending time with a group of people.</p>
+        <select id=q10>
+            <option value="1">1 (Strongly Disaree)</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">2</option>
+            <option value="5">5 (Strongly Agree)</option>
+        </select>
+
+        <br>
+        <br>
 
         <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+        <hr>
+        <footer class="footer">
+            <div class="container">
+                <p>
+                    <a href="#">API Friends List</a> |
+                    <a href="#">Github Repot</a>
+                </p>
+            </div>
+        </footer>
+
+        <div class="modal" tabindex="-1" role="dialog">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title">Your Best Match</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                            <h1 id="matchName"></h1>
+                            <img id="matchPhoto" src="#" alt="">
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+    </div>
 </body>
+
 </html>
+
+<!-- 
+<div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h2 class="modal-title"><strong>Best Match</strong></h2>
+        </div>
+        <div class="modal-body">
+          <h2 id="match-name"></h2>
+          <img id="match-img" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div> -->
+
