--- a/app/public/home.html
+++ b/app/public/home.html
@@ -17,7 +17,7 @@
         <hr class="my-4">
         <p>Answer a few basic querstions.</p>
         <p>Then find the firend with the greatest compatibility!</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Go to Survey</a>
+        <a class="btn btn-primary btn-lg" href="/survey" role="button">Go to Survey</a>
       </div>
 
     </div>
