--- a/app/public/home.html
+++ b/app/public/home.html
@@ -11,20 +11,23 @@
     <title>Friend Finder</title>
 </head>
 <body>
+  <div class = "container">
     <div class="jumbotron">
+      <div class = "row">
+        <div class = "col-12">
         <h1 class="display-4">Friend Finder</h1>
-        <!-- <p class="lead"></p> -->
         <hr class="my-4">
         <p>Answer a few basic querstions.</p>
         <p>Then find the firend with the greatest compatibility!</p>
         <a class="btn btn-primary btn-lg" href="/survey" role="button">Go to Survey</a>
       </div>
-
+    </div>
+    </div>
     </div>
 
     <footer class="footer">
       <div class="container">
-        <p><a href="#">API Friends List</a> | <a href="#">Github Repot</a></p>
+        <p><a href="#">API Friends List</a> | <a href="#">Github Repo</a></p>
       </div>
     </footer>
 
