everything seems to be working

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <title>Friend Finder</title>
 </head>
 <body>
@@ -15,11 +16,11 @@
     <div class="jumbotron">
       <div class = "row">
         <div class = "col-12">
-        <h1 class="display-4">Friend Finder</h1>
+        <h2 class="display-4">Friend Finder</h2>
         <hr class="my-4">
         <p>Answer a few basic querstions.</p>
         <p>Then find the firend with the greatest compatibility!</p>
-        <a class="btn btn-primary btn-lg" href="/survey" role="button">Go to Survey</a>
+        <a class="btn btn-dark btn-lg" href="/survey" role="button">Go to Survey</a>
       </div>
     </div>
     </div>
@@ -27,7 +28,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="#">API Friends List</a> | <a href="#">Github Repo</a></p>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/beckymcclain8/FriendFinder">Github Repo</a></p>
       </div>
     </footer>
 
