--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
-    
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
         crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/style.css">
 
@@ -43,7 +43,7 @@
                 <h3>Question 1</h3>
                 <p>Your mind is always buzzing with unexplored ideas and plans.</p>
                 <select class="options" id="q1">
-                    <option value="1">1 (Strongly Disaree)</option>
+                    <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -53,7 +53,7 @@
                 <h3>Question 2</h3>
                 <p>Generally speaking, you rely more on your experience than your imagaination.</p>
                 <select class="options" id="q2">
-                    <option value="1">1 (Strongly Disaree)</option>
+                    <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -63,7 +63,7 @@
                 <h3>Question 3</h3>
                 <p>You find it easy to stay relaxed and focused even when there is some pressure.</p>
                 <select class="options" id="q3">
-                    <option value="1">1 (Strongly Disaree)</option>
+                    <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -73,7 +73,7 @@
                 <h3>Question 4</h3>
                 <p>You rarely do something just out of sheer curiosity.</p>
                 <select class="options" id="q4">
-                    <option value="1">1 (Strongly Disaree)</option>
+                    <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -83,7 +83,7 @@
                 <h3>Question 5</h3>
                 <p>People can rarely upset you.</p>
                 <select class="options" id="q5">
-                    <option value="1">1 (Strongly Disaree)</option>
+                    <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -93,7 +93,7 @@
                 <h3>Question 6</h3>
                 <p>It is ofent difficult for you to relate to other people's feelings.</p>
                 <select class="options" id="q6">
-                    <option value="1">1 (Strongly Disaree)</option>
+                    <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -103,7 +103,7 @@
                 <h3>Question 7</h3>
                 <p>In a discussion, truth should be more important than people's sensitivities.</p>
                 <select class="options" id="q7">
-                    <option value="1">1 (Strongly Disaree)</option>
+                    <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -113,7 +113,7 @@
                 <h3>Question 8</h3>
                 <p>You rarely get carried away by fantasies and ideas.</p>
                 <select class="options" id="q8">
-                    <option value="1">1 (Strongly Disaree)</option>
+                    <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -125,7 +125,7 @@
                     not.
                 </p>
                 <select class="options" id="q9">
-                    <option value="1">1 (Strongly Disaree)</option>
+                    <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -135,7 +135,7 @@
                 <h3>Question 10</h3>
                 <p>You feel more energetic after spending time with a group of people.</p>
                 <select class="options" id="q10">
-                    <option value="1">1 (Strongly Disaree)</option>
+                    <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -162,10 +162,10 @@
                         <!-- Modal content-->
                         <div class="modal-content">
                             <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 <h2 class="modal-title">
                                     <strong>Best Match</strong>
                                 </h2>
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
                             <div class="modal-body">
                                 <h2 id="matchName"></h2>
@@ -185,11 +185,8 @@
         <!--container div-->
     </div>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
     <script>
         $("#submit").on("click", function (event) {
-            //  event.preventDefault();
 
             function validate() {
                 var isValid = true;
@@ -222,7 +219,7 @@
                 };
                 $.post("api/friends", userData, function (data) {
 
-});
+                });
 
             } else {
                 alert("You must fill in all fields before clicking submit.")
@@ -233,13 +230,10 @@
                 var matchName = '';
                 var matchPhoto = '';
                 var bestScore = 10000;
-                // console.log(data.length);
-                // console.log(data.length - 1);
+
                 for (var i = 0; i < data.length - 1; i++) {
 
                     var currentScore = data[i].scores;
-                    // if (i === 0) 
-                    //     bestScore = scoreDifference;
 
                     var scoreDifference = 0;
                     for (var j = 0; j < currentScore.length; j++) {
@@ -252,8 +246,7 @@
                         matchName = data[i].name;
                         matchPhoto = data[i].photo;
                     }
-                    // console.log("myScore/userData: " + myScore);
-                    // console.log("theirScore: " + theirScore);
+
                     console.log(matchName);
                     console.log(matchPhoto);
                     console.log("Score Diff: " + scoreDifference);
@@ -262,7 +255,7 @@
                 $("#matchName").text(matchName);
                 $("#matchPhoto").attr("src", matchPhoto);
                 $("#results-modal").modal("toggle");
- 
+
             });
 
 
