footer links updated

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -150,8 +150,8 @@
                 <footer class="footer">
                     <div class="container">
                         <p>
-                            <a href="#">API Friends List</a> |
-                            <a href="#">Github Repot</a>
+                            <a href="/api/friends">API Friends List</a> |
+                            <a href="https://github.com/beckymcclain8/FriendFinder">Github Repo</a>
                         </p>
                     </div>
                 </footer>
